--- a/testeHTML/Teste.html
+++ b/testeHTML/Teste.html
@@ -5,18 +5,31 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
 	
-	</style>
-</head>
-<body>
-	
-	<h1>Suporte <span class="azul">ATI</span></h1>
-	<br><br><br><br>
-	<a href="#">Procedimentos</a><br><br><br><br>
-	<a href="#">Telefones/Ramais</a><br><br><br><br>
-	<a href="#">Drivers/Instalações</a><br><br><br><br>
-	<a href="#">Formulários Modelos</a><br><br><br><br>
-	<a href="#">Funcionérios do mês</a><br><br><br><br>
+	<table border="0" style="width:100%" align="center">
+		<tr>
+			<td><img src="CTTU.jpg"></td>
+			
+			<td align="center"><h1 id="logo">Suporte <span class="azul">ATI</span></h1></td>
+			<td align="right">
+				<img src="back.png">
+				
+			</td>
+			
 
+		</tr>
+	</table>
+	
+
+
+
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<div>
+	<a href="#">Procedimentos</a><br><br>
+	<a href="#">Telefones/Ramais</a><br><br>
+	<a href="#">Drivers/Instalações</a><br><br>
+	<a href="#">Formulários Modelos</a><br><br>
+	<a href="#">Funcionérios do mês</a><br><br>
+	</div>
 	</body>
 
 </html>
