--- a/testeHTML/procedimentos.html
+++ b/testeHTML/procedimentos.html
@@ -20,25 +20,27 @@
   <nav>
     <ul>
       <li><a class="ex1" href="#">Procedimentos</a></li>
-      <li><a class="ex1" href="#">Telefone / Ramais</a></li>
-      <li><a class="ex1" href="#">Drivers / Instalações</a></li>
+      <li><a class="ex1" href="telefone-ramais.html">Telefone / Ramais</a></li>
+      <li><a class="ex1" href="drivers-instalacoes.html">Drivers / Instalações</a></li>
+      <li><a class="ex1" href="impressoras.html">Impressoras Locadas</a></li>
       <li><a class="ex1" href="#">Formulários Modelos</a></li>
       <li><a class="ex1" href="#">Funcionários do mês</a></li>
       <li><a class="ex1" href="site.html">Voltar</a></li>
     </ul>
   </nav>
   
-  <article style="height: 550px">
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Download Arquivo Config Central Siemens</a></div><br>
+  <article style="height: 600px">
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CTTU 12.03.14.KDS">Download Arquivo Config Central Siemens</a></div><br>
   	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Script Internet e Detran</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Pendrive com vírus procedimento</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Impressora Corrigir - Erro Substituir Cilindro</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Serial das impressoras Data voice</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">EMAC Conformidade Mensal</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Ferramenta Banco do Brasil Financeiro</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Instalação do Sistema Sispro</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Manual Sistema Sasi - Idoso</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Scripts Bat de Mapeamento</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/Procedimento.docx">Pendrive com vírus procedimento</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="errocilindro.html">Impressora Corrigir - Erro Substituir Cilindro</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/Serial data voice.xlsx">Serial das impressoras Data voice</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CONFORMIDADE MENSAL.rtf">EMAC Conformidade Mensal</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/PROCEDIMENTO FERRAMENTA BANCO DO BRASIL.doc">Ferramenta Banco do Brasil Financeiro</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CLONAR ATRAVÉS DO ACRONIS.docx">Clonar Acronis</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/SISPRO - PROCEDIMENTO - EDSON NETO.doc">Instalação do Sistema Sispro</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#procedimentos/Manual de acesso ao sistema Sasi.pdf">Manual Sistema Sasi - Idoso</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="bat.html">Scripts Bat de Mapeamento</a></div><br>
   </article>
 
 </section>
