--- a/testeHTML/site.html
+++ b/testeHTML/site.html
@@ -18,8 +18,9 @@
   <nav>
     <ul>
       <li><a class="ex1" href="Procedimentos.html">Procedimentos</a></li>
-      <li><a class="ex1" href="#">Telefone / Ramais</a></li>
-      <li><a class="ex1" href="#">Drivers / Instalações</a></li>
+      <li><a class="ex1" href="telefone-ramais.html">Telefone / Ramais</a></li>
+      <li><a class="ex1" href="drivers-instalacoes.html">Drivers / Instalações</a></li>
+      <li><a class="ex1" href="impressoras.html">Impressoras Locadas</a></li>
       <li><a class="ex1" href="#">Formulários Modelos</a></li>
       <li><a class="ex1" href="#">Funcionários do mês</a></li>
     </ul>
