--- a/testeHTML/menufones.html
+++ b/testeHTML/menufones.html
@@ -30,8 +30,8 @@
   </nav>
   
   <article style="height: 400px">
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="tabela.html">Telefones</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="tabela2.html">Telefones Úteis</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="tabela.html" style="padding-right: 936px">Telefones</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="tabela2.html" style="padding-right: 864px">Telefones Úteis</a></div><br>
   </article>
 
 </section>
