--- a/testeHTML/procedimentos.html
+++ b/testeHTML/procedimentos.html
@@ -30,17 +30,16 @@
   </nav>
   
   <article style="height: 600px">
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CTTU 12.03.14.KDS">Download Arquivo Config Central Siemens</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Script Internet e Detran</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/Procedimento.docx">Pendrive com vírus procedimento</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="errocilindro.html">Impressora Corrigir - Erro Substituir Cilindro</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/Serial data voice.xlsx">Serial das impressoras Data voice</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CONFORMIDADE MENSAL.rtf">EMAC Conformidade Mensal</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/PROCEDIMENTO FERRAMENTA BANCO DO BRASIL.doc">Ferramenta Banco do Brasil Financeiro</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CLONAR ATRAVÉS DO ACRONIS.docx">Clonar Acronis</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/SISPRO - PROCEDIMENTO - EDSON NETO.doc">Instalação do Sistema Sispro</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#procedimentos/Manual de acesso ao sistema Sasi.pdf">Manual Sistema Sasi - Idoso</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="bat.html">Scripts Bat de Mapeamento</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CTTU 12.03.14.KDS" style="padding-right: 525px">Download Arquivo Config Central Siemens</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#" style="padding-right: 766px">Script Internet e Detran</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/Procedimento.docx" style="padding-right: 639px">Pendrive com vírus procedimento</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="errocilindro.html" style="padding-right: 511px">Impressora Corrigir - Erro Substituir Cilindro</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CONFORMIDADE MENSAL.rtf" style="padding-right: 693px">EMAC Conformidade Mensal</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/PROCEDIMENTO FERRAMENTA BANCO DO BRASIL.doc" style="padding-right: 569px">Ferramenta Banco do Brasil Financeiro</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/CLONAR ATRAVÉS DO ACRONIS.docx" style="padding-right: 872px">Clonar Acronis</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/SISPRO - PROCEDIMENTO - EDSON NETO.doc" style="padding-right: 694px">Instalação do Sistema Sispro</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="procedimentos/Manual de acesso ao sistema Sasi.pdf" style="padding-right: 700px">Manual Sistema Sasi - Idoso</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="bat.html" style="padding-right: 710px">Scripts Bat de Mapeamento</a></div><br>
   </article>
 
 </section>
