--- a/testeHTML/telefone-ramais.html
+++ b/testeHTML/telefone-ramais.html
@@ -30,9 +30,9 @@
   </nav>
   
   <article style="height: 500px">
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="menufones.html">Telefones Fornecedores</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Ramais CTTU Folha 1</a></div><br>
-  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="#">Ramais CTTU Folha 2</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="menufones.html" style="padding-right: 756px">Telefones Fornecedores</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="RAMAIS 001.jpg" style="padding-right: 776px">Ramais CTTU Folha 1</a></div><br>
+  	<div style="background: radial-gradient(yellow, green);"><a class="ex2" href="RAMAIS 002.jpg" style="padding-right: 776px">Ramais CTTU Folha 2</a></div><br>
   </article>
 
 </section>
